<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    card_view:cardCornerRadius="2dp"
    card_view:contentPadding="10dp"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="699dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="382dp"
            android:layout_height="699dp"
            android:background="@drawable/frame3"
            android:gravity="center_horizontal|fill|fill_horizontal|center_vertical|end"
            android:orientation="vertical"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/foodimageView"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:paddingLeft="10dp"
                card_view:srcCompat="@drawable/burrito" />

            <TextView
                android:id="@+id/mealtextView"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/food_goes_here" />

            <TextView
                android:id="@+id/descrip_textView"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/description" />

            <LinearLayout
                android:layout_width="363dp"
                android:layout_height="81dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp">

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="71dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/back"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="289dp"
                    tools:layout_editor_absoluteY="198dp" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/delete"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="289dp"
                    tools:layout_editor_absoluteY="150dp" />

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="51dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/edit"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="286dp"
                    tools:layout_editor_absoluteY="106dp" />

                <Button
                    android:id="@+id/bbutton"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/next"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="289dp"
                    tools:layout_editor_absoluteY="63dp" />

                <Button
                    android:id="@+id/pbutton"
                    android:layout_width="91dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/previous"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="291dp"
                    tools:layout_editor_absoluteY="16dp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/r_layout"
                android:layout_width="match_parent"
                android:layout_height="317dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>